# actor-mesh-demo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  demo.py  docker-compose.test.yml  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  start_actors.py  start_demo.sh
actors/: __init__.py  base.py  context_retriever.py  decision_router.py  escalation_router.py  execution_coordinator.py  guardrail_validator.py  intent_analyzer.py  response_aggregator.py  response_generator.py  sentiment_analyzer.py  sentiment_analyzer_ml.py
api/: __init__.py  gateway.py  websocket.py
docker/: start-all.sh
docs/: APPLE_SILICON_FIX.md  IMPLEMENTATION_SUMMARY.md  KUBERNETES_DEPLOYMENT.md  MAKEFILE_GUIDE.md  QUICKSTART.md  TESTING_GUIDE.md
docs/agent-spec/: design.md  implementation.md  plan.md
k8s/base/: ingress.yaml  kustomization.yaml  namespace.yaml  nats.yaml  redis.yaml  secrets.yaml
k8s/configmaps/: app-config.yaml
k8s/deployments/: actors.yaml  gateway.yaml  mock-services.yaml
k8s/overlays/development/: kustomization.yaml
k8s/overlays/development/patches/: gateway-dev.yaml  resources-dev.yaml
k8s/overlays/production/: kustomization.yaml
mock_services/: __init__.py  customer_api.py  orders_api.py  tracking_api.py
models/: __init__.py  message.py
scripts/: build-images.sh  deploy.sh  k3d-setup.sh  registry-config.yaml
test_mock_services/: customer_api.py  orders_api.py  tracking_api.py
tests/: __init__.py  conftest.py  conftest_e2e.py  test_basic_flow.py  test_e2e_setup.py  test_phase4_phase5.py  test_phase6_web.py  test_runner.py  test_setup_validation.py
tests/integration/: test_actor_flow.py  test_system_e2e.py
tests/unit/: test_base_actor.py  test_message_models.py  test_mock_services.py  test_sentiment_analyzer.py  test_storage.py  test_storage_simple.py
web/: chat.html  widget.html
